--- a/homework_1st.html
+++ b/homework_1st.html
@@ -51,7 +51,7 @@
                         <label class="input-group-text" for="inputGroupSelect01">수량</label>
                     </div>
                     <select class="custom-select" id="inputGroupSelect01">
-                        <option selected>---수량을 선택하세요---</option>
+                        <option selected>----수량을 선택하세요----</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
