--- a/homework_2nd.html
+++ b/homework_2nd.html
@@ -97,7 +97,7 @@
                 alert("수량을 선택하세요");
             } else if ( address == "") {
                 alert("주소를 입력하세요");
-            } else if (numbsers == "") {
+            } else if (numbers == "") {
                 alert("전화번호를 입력하세요");
             }
             // console.log($("#txt_name").val());
